Adding working cmake with server library

--- a/server/CMakeLists.txt
+++ b/server/CMakeLists.txt
@@ -4,8 +4,12 @@ set(INCLUDE_DIRS
     ${CMAKE_CURRENT_SOURCE_DIR}
 )
 
-add_library(util util.c util.h)
+add_library(server_functions server_functions.c server_functions.h)
+add_library(util ../util/util.c ../util/util.h)
 
 add_executable(server server.c)
+target_include_directories(server PRIVATE ${INCLUDE_DIRS})
+
 target_link_libraries(server PRIVATE util)
+target_link_libraries(server PRIVATE server_functions)
 
