--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,8 +28,8 @@ set(CMAKE_C_CLANG_TIDY "clang-tidy")
 add_subdirectory(server)
 add_subdirectory(client)
 add_subdirectory(util)
-# add_subdirectory(test)
+add_subdirectory(test)
 
-# include(CTest)
-# find_library(CRITERION criterion REQUIRED)
-# set(CRITERION_FLAGS --verbose -j1)
+include(CTest)
+find_library(CRITERION criterion REQUIRED)
+set(CRITERION_FLAGS --verbose -j1)
